# yolov4-triton-tensorrt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
clients/c++/: CMakeLists.txt  LICENSE  README.md  Triton.hpp  Yolo.hpp  common.hpp  yolov4-client.cpp
clients/python/: README.md  boundingbox.py  client.py  environment.yml  labels.py  processing.py  render.py
converter/: convert.py
layers/: mish.cu  mish.h  yololayer.cu  yololayer.h
networks/: yolov4.h  yolov4p5.h  yolov4tiny.cfg  yolov4tiny.h  yolov4tiny3l.cfg  yolov4tiny3l.h
parser/: cxxopts.hpp
utils/: logging.h  profiler.h  weights.h
